# cosmo

./: .gitignore  Cargo.toml  README.md
data/: example.graph  oregon.graph
src/: algorithms.rs  comm_io.rs  config.rs  io_status.rs  lib.rs  main.rs  types.rs  util.rs
src/algorithms/: analysis.rs  bfs.rs  path.rs  scc.rs  wcc.rs
src/comm_io/: comm_idx.rs  csr_block.rs  scc_idx.rs  sim_csr_block.rs
src/types/: graph_query.rs  graph_serialize.rs
