[package]
name = "cosmo"
version = "0.1.0"
edition = "2021"
authors = ["Songyao Wang <wangsong23@mails.tsinghua.edu.cn>"]

[dependencies]
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
moka = { version = "0.12.10", features = ["sync"] }
rayon = "1.10.0"
crossbeam-channel = "0.5.14"
clap = { version = "4.4.2", features = ["derive"] }
indicatif = "0.17.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
rand = "0.8.5"
bincode = "1.3.3"
memmap2 = "0.9.5"
rustc-hash = "1.1"

[profile.test]
incremental = true

[profile.release]
incremental = true